--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,72 @@
 #root {
-  max-width: 840px;
-  margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
-.section {
+input {
+  padding: 1rem;
+  font-size: 18px;
+}
+
+.calc-box {
+  border: 1px solid #eaeaea;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.input-box {
+  display: flex;
+  gap: 2rem;
+}
+
+.duration-input {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.duration-input-display {
+  color: #777;
+  font-size: 14px;
+}
+
+.operator {
+  font-size: 32px;
+  min-width: 20px;
+}
+
+.result-box {
+  font-size: 32px;
+}
+
+.operator-dials-container {
   margin-top: 2rem;
-  margin-bottom: 2rem;
+
+  display: flex;
+  justify-content: end;
+}
+
+.operator-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 50px);
+  grid-auto-rows: 40px;
+  gap: 0.5rem;
+}
+
+.dials-container {
+  margin-top: 2rem;
+
+  display: flex;
+  gap: 2rem;
+}
+
+.dial-grid {
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 40px;
+  gap: 0.5rem;
 }
