Add modes for diffing dates and getting a duration from a date

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ input {
   margin-top: 2rem;
 
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
 }
 
 .operator-grid {
