--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,14 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+h1, h2, h3 {
+  margin: 1rem 0;
+}
+
+p {
+  margin: 1rem 0;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
