Style things consistently

--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,8 @@
   padding: 0 2rem;
 }
 
-input {
-  padding: 1rem;
-  font-size: 18px;
-}
-
 .calc-box {
-  border: 1px solid #eaeaea;
+  border: 1px solid var(--secondary-light);
   border-radius: 8px;
   display: flex;
   flex-direction: column;
@@ -29,7 +24,7 @@ input {
 }
 
 .duration-input-display {
-  color: #777;
+  color: var(--secondary-light);
   font-size: 14px;
 }
 
@@ -47,6 +42,7 @@ input {
 
   display: flex;
   justify-content: space-between;
+  gap: 2rem;
 }
 
 .operator-grid {
