Clean up styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  padding: 0 2rem;
+  padding: 0 2rem 2rem;
 }
 
 .calc-box {
@@ -13,8 +13,23 @@
 }
 
 .input-box {
-  display: flex;
-  gap: 2rem;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 1rem;
+}
+
+.input-box input {
+  min-width: 250px;
+}
+
+.input-box :not(input) {
+  text-align: center;
+}
+
+@media (min-width: 800px) {
+  .input-box {
+    grid-template-columns: auto 1fr auto 1fr;
+  }
 }
 
 .duration-input {
@@ -28,35 +43,40 @@
   font-size: 14px;
 }
 
-.operator {
+.calc-operator {
   font-size: 32px;
   min-width: 20px;
 }
 
-.result-box {
+.result {
   font-size: 32px;
 }
 
-.operator-dials-container {
+.settings-box {
   margin-top: 2rem;
 
   display: flex;
   justify-content: space-between;
-  gap: 2rem;
+  gap: 1rem 2rem;
 }
 
-.operator-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 50px);
-  grid-auto-rows: 40px;
-  gap: 0.5rem;
+@media (max-width: 600px) {
+  .settings-box {
+    flex-direction: column;
+  }
 }
 
-.dials-container {
+.dials-box {
   margin-top: 2rem;
 
   display: flex;
   gap: 2rem;
+}
+
+@media (max-width: 600px) {
+  .dials-box {
+    flex-direction: column;
+  }
 }
 
 .dial-grid {
